# cargo-local-install

./: .gitignore  Cargo.toml  Readme.md  rustfmt.toml
.cargo/: config
.github/workflows/: rust.yml
scripts/: test.cmd
src/: lib.rs  macros.rs  main.rs  manifest.rs
test/: Cargo.toml
test/local-package/: Cargo.toml
test/no-metadata/: Cargo.toml
test/package-metadata/: Cargo.toml
