# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "cargo-local-install"
version         = "0.1.11"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
repository      = "https://github.com/MaulingMonkey/cargo-local-install.git"
documentation   = "https://docs.rs/cargo-local-install/"
edition         = "2018"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "Wraps `cargo install` for better local, non-conflicting installation"
keywords        = ["cargo", "install"]
categories      = ["development-tools::cargo-plugins"]
exclude         = [".cargo", ".vscode", "scripts", "target", "test"]

[badges]
travis-ci       = { repository = "MaulingMonkey/cargo-local-install", branch = "master" }

[features]
default         = ["manifest"]
manifest        = ["serde", "toml"]

[dependencies]
serde           = { version = "1",   optional = true }
toml            = { version = "0.5", optional = true }
